2009-07-15  Alex Harsanyi  <haral@users.sourceforge.net>

	* vc-clearcase.el (cleartool-wait-for): 423 Fix Bug #2821317, `or'
	short-circuit was preventing `accept-process-output' being called.

2009-07-10  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* vc-clearcase.el (vc-clearcase-annotate-contributor)
	(vc-clearcase-annotate-contributor-to-line)
	(vc-clearcase-annotate-latest-on-branch): new functions
	(vc-clearcase-patch-annotate-mode): new function, called after
	vc-annotate is loaded.

2009-05-19  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* vc-clearcase.el (clearcase-read-view-tag): fix let binding

2009-02-17  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* vc-clearcase.el (vc-clearcase-modify-change-comment): fix format
	string.
	(vc-clearcase-print-log): use `vc-setup-buffer' to prepare the log
	buffer.

2009-02-16  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* ucm.el (ucm-actb-file-optimize-revisions): don't merge
	checked out versions with previous versions
	(ucm-actb-fetch-activity): sort the versions of a file.

2009-01-09  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* vc-clearcase.el (clearcase-finish-checkout): 410 Fix Bug #2493759
	account for FILE being a fileset.

2008-12-16  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* vc-clearcase.el (vc-clearcase-diff): don't strip the files from
	their directory names or change `default-directory'.

2008-12-08  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* ucm.el (ucm-actb-checkin-command, ucm-checkin-activity): fix
	log-edit call

2008-12-05  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* vc-clearcase.el (vc-clearcase-state-heuristic): fetch the
	clearcase comment and activity here instead of
	`vc-cleacase-state'.  It seems `vc-clearcase-state' is never
	called...
	(vc-clearcase-state-heuristic): 406 'needs-patch state was renamed
	to 'needs-update
	(clearcase-maybe-set-vc-state): fetch the clearcase comment and